<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ded8"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/text_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_below="@id/image_logo"
            android:layout_marginTop="32dp"/>

        <EditText
            android:id="@+id/edit_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_below="@id/text_Email"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/text_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_below="@id/edit_Email"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/edit_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_below="@id/text_Password"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:backgroundTint="@color/ded7"
            android:layout_below="@id/edit_Password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"/>


        <TextView
            android:id="@+id/text_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textSize="14sp"
            android:textColor="@color/ded5"
            android:layout_below="@id/btnSignIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"/>

    </RelativeLayout>
</ScrollView>