<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ded8"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/imageContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/imgBurger"
                android:layout_width="300dp"
                android:layout_height="285dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:contentDescription="@string/img_description"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />
        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageContainer"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/prodTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tiktoksansbold"
                    android:text="@string/tasty_burger"
                    android:textColor="#AD1457"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/txtRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/txtRating"
                    android:textColor="#030201" />

                <TextView
                    android:id="@+id/prodDeets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/burger1"
                    android:textColor="#030201"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txtCals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/text_calories"
                    android:textColor="#030201" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/edit_Quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardViewDetails"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:hint="How many do you want?"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_Quantity"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/ded7"
                android:text="@string/goBack"
                android:textSize="16sp"
                app:strokeColor="@color/ded7"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/addCart"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/ded4"
                android:text="@string/addTxt"
                android:textSize="16sp"
                app:strokeColor="@color/ded7"
                app:strokeWidth="1dp" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>