<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ded8">
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="522dp"
        android:layout_height="500dp"
        android:layout_marginBottom="316dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/burgerdeets" />

    <TextView
        android:id="@+id/prodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tiktoksansbold"
        android:text="@string/tasty_burger"
        android:textColor="@color/ded7"
        android:textSize="26dp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="371dp" />

    <TextView
        android:id="@+id/prodDeets"
        android:layout_width="349dp"
        android:layout_height="119dp"
        android:text="@string/burger1"
        android:textSize="17dp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="415dp" />

    <Button
        android:id="@+id/addCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863"
        app:strokeColor="@color/ded7"
        app:strokeWidth="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>